--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.18.13",
     "gulp": "^3.9.1",
+    "gulp-modernizr": "^1.0.0",
     "gulp-postcss": "^7.0.0",
     "gulp-watch": "^4.3.11",
     "postcss-hexrgba": "^1.0.0",
