--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "browser-sync": "^2.18.13",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
+    "gulp-cssnano": "^2.1.2",
     "gulp-imagemin": "^4.0.0",
     "gulp-modernizr": "^1.0.0",
     "gulp-postcss": "^7.0.0",
+    "gulp-rev": "^8.1.0",
+    "gulp-uglify": "^3.0.0",
     "gulp-usemin": "^0.3.28",
     "gulp-watch": "^4.3.11",
     "postcss-hexrgba": "^1.0.0",
